// Vitest Snapshot v1

exports[`Button > button with text 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ fYqWZU"
    >
      Action
    </button>
  </div>
</body>
`;

exports[`Button > empty button 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ fYqWZU"
    />
  </div>
</body>
`;

exports[`Button > submit button 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ jdbWoZ"
      type="submit"
    >
      Action
    </button>
  </div>
</body>
`;
